--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,12 @@
 org.soframel.health.covid.client.CoronavirusAPIFrance/mp-rest/url=https://coronavirusapi-france.now.sh
 org.soframel.health.covid.client.CoronavirusAPIFrance/mp-rest/scope=javax.inject.Singleton
 
-
-
+elastic.hostname=localhost
+elastic.port=9200
+elastic.scheme=http
+elastic.username=elastic
+elastic.password=changeme
+elastic.covid.indexName=covid
 
 quarkus.log.level=INFO
 quarkus.log.category."org.jboss.resteasy".level=TRACE
