completed/corrected french data parsing

--- a/elastic/mapping.json
+++ b/elastic/mapping.json
@@ -48,6 +48,12 @@
             }
           }
         }
+      },
+      "totalCasesPer100kInhabitants": {
+        "type": "integer"
+      },
+      "totalDeathsPer100kInhabitants": {
+        "type": "integer"
       }
     }
   }
