added luxembourg data - 1rst

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@
 
 org.soframel.health.covid.client.CoronavirusAPIFrance/mp-rest/url=https://coronavirusapi-france.now.sh
 org.soframel.health.covid.client.CoronavirusAPIFrance/mp-rest/scope=javax.inject.Singleton
+org.soframel.health.covid.client.LuxCovidDataURL=https://data.public.lu/fr/datasets/r/d80cdf8c-e454-4319-8d15-044def8769e3
 
 elastic.hostname=localhost
 elastic.port=9200
@@ -12,5 +13,5 @@ elastic.password=changeme
 elastic.covid.indexName=covid
 
 quarkus.log.level=INFO
-quarkus.log.category."org.jboss.resteasy".level=TRACE
+quarkus.log.category."org.soframel.health.covid".level=FINEST
 
