added region data

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,6 @@ elastic.username=elastic
 elastic.password=changeme
 elastic.covid.indexName=covid
 
-quarkus.log.level=INFO
-quarkus.log.category."org.soframel.health.covid".level=FINEST
+quarkus.log.level=SEVERE
+quarkus.log.category."org.soframel.health.covid".level=SEVERE
 
