prepare for push to docker container

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,13 +5,12 @@ org.soframel.health.covid.client.CoronavirusAPIFrance/mp-rest/url=https://corona
 org.soframel.health.covid.client.CoronavirusAPIFrance/mp-rest/scope=javax.inject.Singleton
 org.soframel.health.covid.client.LuxCovidDataURL=https://data.public.lu/fr/datasets/r/d80cdf8c-e454-4319-8d15-044def8769e3
 
-elastic.hostname=localhost
+elastic.hostname=elasticsearch
 elastic.port=9200
 elastic.scheme=http
-elastic.username=elastic
-elastic.password=changeme
+elastic.username=covid
 elastic.covid.indexName=covid
 
 quarkus.log.level=SEVERE
-quarkus.log.category."org.soframel.health.covid".level=SEVERE
+quarkus.log.category."org.soframel.health.covid".level=FINEST
 
