added init since date and for country

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@
 
 org.soframel.health.covid.client.CoronavirusAPIFrance/mp-rest/url=https://coronavirusapi-france.now.sh
 org.soframel.health.covid.client.CoronavirusAPIFrance/mp-rest/scope=javax.inject.Singleton
-org.soframel.health.covid.client.LuxCovidDataURL=https://data.public.lu/fr/datasets/r/d80cdf8c-e454-4319-8d15-044def8769e3
+org.soframel.health.covid.client.LuxCovidDataURL=https://data.public.lu/fr/datasets/r/1da1bb72-4450-4f60-915b-6c355db2e7fa
 
 elastic.hostname=elasticsearch
 elastic.port=9200
@@ -13,4 +13,13 @@ elastic.covid.indexName=covid
 
 quarkus.log.level=SEVERE
 quarkus.log.category."org.soframel.health.covid".level=FINEST
+
+
+
+quarkus.log.file.enable=true
+# Send output to a trace.log file under the /tmp directory
+quarkus.log.file.path=/var/log/covid.log
+quarkus.log.file.level=INFO
+quarkus.log.file.format=%d{HH:mm:ss} %-5p [%c{2.}] (%t) %s%e%n
+
 
