added reanimation cases / 100k inhabitants, debugged cron env variables

--- a/elastic/mapping.json
+++ b/elastic/mapping.json
@@ -34,6 +34,9 @@
       "newReanimations": {
         "type": "integer"
       },
+      "population": {
+        "type": "long"
+      },
       "victims": {
         "properties": {
           "victim": {
