--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,6 +20,6 @@ quarkus.log.file.enable=true
 # Send output to a trace.log file under the /tmp directory
 quarkus.log.file.path=/var/log/covid.log
 quarkus.log.file.level=INFO
-quarkus.log.file.format=%d{HH:mm:ss} %-5p [%c{2.}] (%t) %s%e%n
+quarkus.log.file.format=%d{yyyy-MM-dd HH:mm:ss} %-5p [%c{2.}] (%t) %s%e%n
 
 
