added Swiss data

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,7 @@
 org.soframel.health.covid.client.CoronavirusAPIFrance/mp-rest/url=https://coronavirusapi-france.now.sh
 org.soframel.health.covid.client.CoronavirusAPIFrance/mp-rest/scope=javax.inject.Singleton
 org.soframel.health.covid.client.LuxCovidDataURL=https://data.public.lu/fr/datasets/r/1da1bb72-4450-4f60-915b-6c355db2e7fa
+org.soframel.health.covid.client.SwissCovidDataURL=https://raw.githubusercontent.com/openZH/covid_19/master/COVID19_Fallzahlen_CH_total_v2.csv
 
 elastic.hostname=elasticsearch
 elastic.port=9200
