--- a/src/main/docker/Dockerfile.jvm
+++ b/src/main/docker/Dockerfile.jvm
@@ -29,6 +29,7 @@ ARG RUN_JAVA_VERSION=1.3.8
 ENV LANG='en_US.UTF-8' LANGUAGE='en_US:en'
 
 COPY scripts/run-java.sh /deployments/
+COPY scripts/.env /deployments/
 
 # Install java and the run-java script
 # Also set up permissions for user `1001`
@@ -40,17 +41,13 @@ RUN microdnf install curl ca-certificates ${JAVA_PACKAGE} \
     && chown 1001:root /deployments \
     && chown 1001 /deployments/run-java.sh \
     && chmod 540 /deployments/run-java.sh \
-    && echo "securerandom.source=file:/dev/urandom" >> /etc/alternatives/jre/lib/security/java.security \
-    && echo "printenv | grep 'ELASTIC_COVID_PASSWORD' > /deployments/cron.env" > /deployments/set-env.sh \
-    && chmod +x /deployments/set-env.sh
+    && echo "securerandom.source=file:/dev/urandom" >> /etc/alternatives/jre/lib/security/java.security
 
 #CRON
 #Install
 RUN microdnf install crontabs
 #create file for crontab
-RUN echo "SHELL=/bin/bash" >> /deployments/covid-extractor-cron \
-    && echo "BASH_ENV=/deployments/cron.env"  >> /deployments/covid-extractor-cron \
-    && echo "0 7 * * * /deployments/run-java.sh" >> /deployments/covid-extractor-cron
+RUN echo "0 7 * * * /deployments/run-java.sh" >> /deployments/covid-extractor-cron
 #apply correct permissions
 RUN chmod 0600 /deployments/covid-extractor-cron
 # Apply cron job
@@ -70,4 +67,4 @@ EXPOSE 8080
 #To debug
 #CMD ["/bin/bash"]
 #To run CRON
-CMD /deployments/set-env.sh; crond -n -s
+CMD crond -n -s
