--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,13 @@
       <scope>test</scope>
     </dependency>
 
+
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-junit5-mockito</artifactId>
+      <scope>test</scope>
+    </dependency>
+
     <dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-core</artifactId>
